# Laboxide

./: .gitignore  Cargo.toml  README.md  example.db  init_table.sql
.forgejo/workflows/: deploy.yml
src/: config.rs  db.rs  main.rs  middleware.rs  models.rs  utils.rs
src/handler/: auth.rs  course.rs  coursefile.rs  equipment.rs  group.rs  labroom.rs  linux.rs  meeting.rs  mod.rs  schedule.rs  semester.rs  studentlog.rs  subcourse.rs  subschedule.rs  timeline.rs  user.rs
utils/: confirmlog.py
