[package]
name = "auth_webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = { version = "0.9", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
actix-service = "2"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
